[package]
authors = ["Zhichun <unlock_1@163.com>"]
edition = "2018"
name = "PCN-Simulation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
petgraph = "0.5.1"
relative-path = "1.3.2"
rustc-serialize = "0.3.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
